tambah keterangan pencegahan

--- a/dev/covid/index.html
+++ b/dev/covid/index.html
@@ -194,8 +194,7 @@
           <div class="section-title">
             <h2>PENCEGAHAN CORONA VIRUS</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste
-              officiis commodi quidem hic quas.
+             Cara terbaik untuk mencegah penyebaran infeksi adalah dengan:
             </p>
           </div>
 
